Fix react-select z-index issues
There are a bunch of threads about this on react-select's github. The
solution I found uses the "menuPortal" option, and seems to work with
everything I've tested.

* https://github.com/JedWatson/react-select/issues/1085#issuecomment-496512479
* https://github.com/JedWatson/react-select/issues/404#issuecomment-433608100

--- a/media/css/mediathread_new.css
+++ b/media/css/mediathread_new.css
@@ -4268,5 +4268,5 @@ ul.section-tabs>li>a.active {
 }
 
 #search-well .form-group {
-    z-index: 3;
+    z-index: 4;
 }
